front-end/src/App.css
.app-container {
		display: flex;
		flex-direction: column;
		align-items: center;
		gap: 10px;
		margin: 0 auto;
}

.motto {
		font-size: 1.5em;
		font-weight: bold;
		text-align: center;
}

.copyright {
		font-size: 0.9em;
		color: black;
		text-align: center;
}

